# adamant_basilisk_algorithms

./: AGENTS.md  CMakeLists.txt  README.md  attTrackingErrorAlgorithm.cpp  attTrackingErrorAlgorithm.h  attTrackingErrorAlgorithm_c.cpp  attTrackingErrorAlgorithm_c.h  build_a.sh  riscv32-toolchain.cmake
_UnitTest/: test_attTrackingError.py
agent/: basilisk-c-shim.md
agents/: README.md
architecture/utilities/: avsEigenSupport.cpp  avsEigenSupport.h  rigidBodyKinematics.hpp
attTrackingError/: attTrackingErrorAlgorithm.cpp  attTrackingErrorAlgorithm.h  attTrackingErrorAlgorithm_c.cpp  attTrackingErrorAlgorithm_c.h
rateDamp/: RateDampAlgorithm_c.cpp  RateDampAlgorithm_c.h  rateDampAlgorithm.cpp  rateDampAlgorithm.h  rateDampAlgorithm_c.cpp  rateDampAlgorithm_c.h
